# 03_internals

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
byterun/: __main__.py  execfile.py  pyobj.py  pyvm2.py
tests/: test_basic.py  test_functions.py  vmtest.py
